# cydramanager

./: INSTALL  README  meson.build  meson_options.txt
.cache/clangd/index/: arg.h.43D62DC5F0E3F9D1.idx  configuration.c.A445D2D758745BD6.idx  configuration.h.242D8C22912D0726.idx  debug.c.5E9B44209FA89529.idx  debug.h.F2D9E365D31341A0.idx  exit.c.0C21DF7043DBAC69.idx  exit.h.2C4298ECA25408EA.idx  install_manager.c.E5D0B6B3F0D4F36D.idx  install_manager.h.4ED1569980599EA6.idx  list_manager.c.EF37AC88A0C2EA8A.idx  list_manager.h.734A0DE51E90D2FE.idx  main.c.5886D632512F6CBE.idx  main.h.66ADB6AE91CF1D96.idx  remove_manager.c.CA2DA77B1FBB4510.idx  remove_manager.h.4663EC2A2D0AA652.idx  software.h.CC2C1E0F48B71C35.idx  uninstall_manager.c.A6294A452706ADC9.idx  uninstall_manager.h.FABFE7F49B18909A.idx  update_manager.c.828CD7A97CE56504.idx  update_manager.h.8C7D1607FCDCB842.idx  utils.c.55A4FEFD5D390A60.idx  utils.h.62E5C921DABBFE2F.idx
src/: main.c  main.h
src/arguments/: arg.h
src/arguments/debug/: debug.c  debug.h
src/configuration/: configuration.c  configuration.conf  configuration.h
src/exit/: exit.c  exit.h
src/install/: install_manager.c  install_manager.h
src/list/: list_manager.c  list_manager.h
src/remove/: remove_manager.c  remove_manager.h
src/uninstall/: uninstall_manager.h
src/update/: update_manager.c  update_manager.h
src/utilities/: software.h  utils.c  utils.h
